renamed to gm_termcontrol

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 # replace with your username:
-name = termcontrol
+name = gm_termcontrol
 version = 0.0.1
 url = https://github.com/gretchycat/termcontrol
 author = Gretchen Maculo
